# scene_graph_generation

./: .gitignore  1.sh  CLAUDE.md  DATASET.md  INSTALL.md  TROUBLESHOOTING.md  pyproject.toml  run_test_2gpu.sh  run_train_all.sh  run_train_vrd_detector.sh  setup.py  test.py  test_forward_backward.py  train.py  train_eval_vrd.py
configs/: detector_vrd.yaml  e2e_relBGNN_vg_bert.yaml  e2e_relBGNN_vg_glove.yaml  e2e_relBGNN_vg_no_semantics.yaml  e2e_relBGNN_vg_word2vec.yaml  e2e_relBGNN_vrd.yaml  e2e_relIMP_vrd_bert.yaml  e2e_relIMP_vrd_bert_pce.yaml  e2e_relIMP_vrd_bert_pce_poly.yaml  e2e_relIMP_vrd_bert_pce_sigmoid.yaml  e2e_relIMP_vrd_glove.yaml  e2e_relIMP_vrd_glove_pce.yaml  e2e_relIMP_vrd_minilm.yaml  e2e_relIMP_vrd_minilm_pce.yaml  e2e_relIMP_vrd_no_semantics.yaml  e2e_relIMP_vrd_no_semantics_pce.yaml  e2e_relIMP_vrd_word2vec.yaml  e2e_relIMP_vrd_word2vec_attn.yaml  e2e_relIMP_vrd_word2vec_pce_poly.yaml  e2e_relIMP_vrd_word2vec_pce_sigmoid.yaml
docker/: Dockerfile
docker/docker-jupyter/: Dockerfile
pysgg/config/: defaults.py  paths_catalog.py
pysgg/data/datasets/: __init__.py  visual_genome.py
pysgg/engine/: inference.py
pysgg/layers/dcn/: deform_conv_func.py
pysgg/modeling/: box_coder.py  matcher.py
pysgg/modeling/rpn/: anchor_generator.py  loss.py
pysgg/utils/: c2_model_loading.py  collect_env.py  comm.py  device.py
tests/: test_classifier.py  test_comm.py  test_defaults.py  test_deform_conv_func.py  test_detector_pretrain_net.py  test_device.py  test_device_compatibility.py  test_inference.py  test_loss.py  test_model_kern.py  test_relation_head.py  test_relation_test_net.py  test_relation_train_net.py  test_runner.py
tools/: detector_pretrain_net.py  relation_test_net.py  relation_train_net.py  runner.py
util/: load_bert.py  load_minilm.py  load_word2vec.py  roi_heads.py
(+12 files in other folders)
